--- a/index.html
+++ b/index.html
@@ -5,44 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meyija Travels</title>
-    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <header class="nav-bar">
       <h1>Meyija Travels</h1>
       <nav>
         <ul class="nav-items">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Aboutus.html">About Us</a></li>
           <li><a href="#contactus">Contact</a></li>
-          <li><a href="#aboutus">About Us</a></li>
-          <li><a href="#home">Home</a></li>
         </ul>
       </nav>
     </header>
+    <div class="about-us">
+      <h2 class="#aboutus">About Us</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
+        quaerat corporis alias adipisci labore dolorem molestias temporibus
+        assumenda quia soluta <span>Read More</span>
+      </p>
+    </div>
     <main class="main-section">
-      <div class="about-us">
-        <h2 class="#aboutus">About Us</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-          quaerat corporis alias adipisci labore dolorem molestias temporibus
-          assumenda quia soluta <span>Read More</span>
-        </p>
-      </div>
       <div class="topic-one">
-        <h3>Top 5 countries to visit in the summer</h3>
+        <img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=800" width="100px" height="100px" alt="Image of balloons">
+        <a href="topic1.html"><h3>Top 5 countries to visit in the summer</h3></a>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
           recusandae <span>Read More</span>
         </p>
       </div>
       <div class="topic-two">
-        <h3>Recommendations for newlyweds</h3>
+        <img src="https://images.pexels.com/photos/5206714/pexels-photo-5206714.jpeg?auto=compress&cs=tinysrgb&w=800" width="100px" height="100px" alt="Image of a newlywed">
+        <a href="topic2.html"><h3>Recommendations for newlyweds</h3></a>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni,
           adipisci <span>Read More</span>
         </p>
       </div>
       <div class="topic-three">
-        <h3>Top cities to travel to in Europe</h3>
+        <img src="https://images.pexels.com/photos/548077/pexels-photo-548077.jpeg?auto=compress&cs=tinysrgb&w=800" width="100px" height="100px" alt="Image of Paris">
+        <a href="topic3.html"><h3>Top cities to travel to in Europe</h3></a>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore,
           minima? <span>Read More</span>
@@ -52,15 +55,30 @@
     <footer class="footer-section">
       <h2 class="#contactus">Contact Us</h2>
       <div class="subscribe">
-        <input type="text" placeholder="Subscribe to our mailing list" />
+        <input type="text" placeholder="Enter your email address" />
+        <button type="submit">Submit</button>
       </div>
       <div class="socials">
-        <ul>
-          <li><a href="">Instagram</a></li>
+        <ul class="nav-items-2">
+          <li>
+            <a href="https://youtube.com" target="_blank"> Twitter
+            <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50" alt="..">
+            </a>
+        </li>
+        <li>
+            <a href="https://youtube.com" target="_blank"> Youtube
+            <img src="https://www.freepnglogos.com/uploads/youtube-logo-png-images-0.png" width="80" alt=""></li>
+            </a>
+        <li>
+            <a href="https://youtube.com" target="_blank"> Tiktok
+            <img src="https://www.freepnglogos.com/uploads/tik-tok-logo-png/tik-tok-how-use-tiktok-create-cool-videos-with-iphone-14.png" width="70" alt="">
+        </li>
+        </a>
+          <!-- <li><a href="">Instagram</a></li>
           <li><a href="">Twitter</a></li>
-          <li><a href="">Email</a></li>
+          <li><a href="">Email</a></li> -->
         </ul>
-        <p><a href="#">Scroll to top</a></p>
+        <a href="#">Scroll to top</a>
       </div>
     </footer>
   </body>
