cleaned up code and added DP ofmyself

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meyija Travels</title>
     <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="">
   </head>
   <body>
     <header class="nav-bar">
@@ -18,6 +19,7 @@
         </ul>
       </nav>
     </header>
+
     <div class="about-us">
       <h2 class="#aboutus">About Us</h2>
       <p>
@@ -27,10 +29,12 @@
       </p>
       <h2 class="#aboutus">Meet the team</h2>
     </div>
+
+    <!-- This will need to be flexed -->
     <main class="main-section">
       <div class="topic-one">
         <h3>Mel Akas</h3>
-        <img src="" alt="Image of Mel Akas" />
+        <img src="./images/DP Linkedin.jpeg" alt="Image of Mel Akas" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
           recusandae <span><a href="">Read More</a></span>
@@ -38,7 +42,7 @@
       </div>
       <div class="topic-two">
         <h3>Eyi Adepegba</h3>
-        <img src="" alt="Image of Eyi Adepegba" />
+        <img src="./images/DP Linkedin.jpeg" alt="Image of Eyi Adepegba" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni,
           adipisci <span><a href="">Read More</a></span>
@@ -46,7 +50,7 @@
       </div>
       <div class="topic-three">
         <h3>Jay Fakoya</h3>
-        <img src="" alt="Image of Jay Fakoya" />
+        <img src="./images/DP Linkedin.jpeg" alt="Image of Jay Fakoya" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore,
           minima? <span><a href="">Read More</a></span>
@@ -54,33 +58,34 @@
       </div>
     </main>
     <footer class="footer-section">
-      <h2 class="#contactus">Contact Us</h2>
-      <div class="subscribe">
-        <input type="text" placeholder="Subscribe to our mailing list" />
+        <div class="subscribe-section">
+            <h2 class="#contactus">Contact Us</h2>
+            <div class="subscribe">
+              <input type="text" placeholder="Enter your email address" />
+              <button type="submit">Submit</button>
+            </div>
       </div>
-      <div class="socials">
-        <ul>
-            <li>
-                <a href="https://youtube.com" target="_blank"> Twitter
-                <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50" alt="..">
+      
+            <div class="socials">
+              <ul class="nav-items-2">
+                <li>
+                  <a href="https://youtube.com" target="_blank"> Twitter
+                  <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50" alt="..">
+                  </a>
+              </li>
+              <li>
+                  <a href="https://youtube.com" target="_blank"> Youtube
+                  <img src="https://www.freepnglogos.com/uploads/youtube-logo-png-images-0.png" width="80" alt=""></li>
+                  </a>
+              <li>
+                  <a href="https://youtube.com" target="_blank"> Tiktok
+                  <img src="https://www.freepnglogos.com/uploads/tik-tok-logo-png/tik-tok-how-use-tiktok-create-cool-videos-with-iphone-14.png" width="70" alt="">
                 </a>
-            </li>
-            <li>
-                <a href="https://youtube.com" target="_blank"> Youtube
-                <img src="https://www.freepnglogos.com/uploads/youtube-logo-png-images-0.png" width="80" alt=""></li>
-                </a>
-            <li>
-                <a href="https://youtube.com" target="_blank"> Tiktok
-                <img src="https://www.freepnglogos.com/uploads/tik-tok-logo-png/tik-tok-how-use-tiktok-create-cool-videos-with-iphone-14.png" width="70" alt="">
-            </li>
-            </a>
-          <!-- <li><a href="">Instagram</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Email</a></li> -->
-        </ul>
-        <p><a href="#">Scroll to top</a></p>
-      </div>
-    </footer>
+                </li>
+              </ul>
+            </div>
+              <a href="#">Scroll to top</a>
+          </footer>
   </body>
 </html>
 
