--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
+
+    <!-- This will need to be flexed -->
     <header class="nav-bar">
       <h1>Meyija Travels</h1>
       <nav>
@@ -17,6 +19,7 @@
           <li><a href="#contactus">Contact</a></li>
         </ul>
       </nav>
+      <!-- Flex ends here -->
     </header>
     <div class="about-us">
       <h2 class="#aboutus">About Us</h2>
@@ -26,6 +29,8 @@
         assumenda quia soluta <span>Read More</span>
       </p>
     </div>
+
+    <!-- This will need to be flexed or CSS grid -->
     <main class="main-section">
       <div class="topic-one">
         <img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=800" width="100px" height="100px" alt="Image of balloons">
@@ -52,12 +57,18 @@
         </p>
       </div>
     </main>
-    <footer class="footer-section">
+
+
+<footer class="footer-section">
+  <!-- This section may be flexed -->
+  <div class="subscribe-section">
       <h2 class="#contactus">Contact Us</h2>
       <div class="subscribe">
         <input type="text" placeholder="Enter your email address" />
         <button type="submit">Submit</button>
       </div>
+</div>
+<!-- This section will be flexed -->
       <div class="socials">
         <ul class="nav-items-2">
           <li>
@@ -72,14 +83,19 @@
         <li>
             <a href="https://youtube.com" target="_blank"> Tiktok
             <img src="https://www.freepnglogos.com/uploads/tik-tok-logo-png/tik-tok-how-use-tiktok-create-cool-videos-with-iphone-14.png" width="70" alt="">
-        </li>
-        </a>
-          <!-- <li><a href="">Instagram</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Email</a></li> -->
+          </a>
+          </li>
         </ul>
-        <a href="#">Scroll to top</a>
       </div>
+        <a href="#">Scroll to top</a>
     </footer>
+
   </body>
 </html>
+
+
+
+
+     <!-- <li><a href="">Instagram</a></li>
+          <li><a href="">Twitter</a></li>
+          <li><a href="">Email</a></li> -->
