--- a/topic3.html
+++ b/topic3.html
@@ -25,34 +25,35 @@
         <img src="https://images.pexels.com/photos/417344/pexels-photo-417344.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of a beach">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores architecto minima inventore libero magnam cupiditate nisi ratione quae quisquam dolorem.</p>
     </main>
+    
     <footer class="footer-section">
-      <h2 class="#contactus">Contact Us</h2>
-      <div class="subscribe">
-        <input type="text" placeholder="Enter your email address" />
-        <button type="submit">Submit</button>
+        <div class="subscribe-section">
+            <h2 class="#contactus">Contact Us</h2>
+            <div class="subscribe">
+              <input type="text" placeholder="Enter your email address" />
+              <button type="submit">Submit</button>
+            </div>
       </div>
-      <div class="socials">
-        <ul>
-            <li>
-                <a href="https://youtube.com" target="_blank"> Twitter
-                <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50" alt="..">
+      
+            <div class="socials">
+              <ul class="nav-items-2">
+                <li>
+                  <a href="https://youtube.com" target="_blank"> Twitter
+                  <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50" alt="..">
+                  </a>
+              </li>
+              <li>
+                  <a href="https://youtube.com" target="_blank"> Youtube
+                  <img src="https://www.freepnglogos.com/uploads/youtube-logo-png-images-0.png" width="80" alt=""></li>
+                  </a>
+              <li>
+                  <a href="https://youtube.com" target="_blank"> Tiktok
+                  <img src="https://www.freepnglogos.com/uploads/tik-tok-logo-png/tik-tok-how-use-tiktok-create-cool-videos-with-iphone-14.png" width="70" alt="">
                 </a>
-            </li>
-            <li>
-                <a href="https://youtube.com" target="_blank"> Youtube
-                <img src="https://www.freepnglogos.com/uploads/youtube-logo-png-images-0.png" width="80" alt=""></li>
-                </a>
-            <li>
-                <a href="https://youtube.com" target="_blank"> Tiktok
-                <img src="https://www.freepnglogos.com/uploads/tik-tok-logo-png/tik-tok-how-use-tiktok-create-cool-videos-with-iphone-14.png" width="70" alt="">
-            </li>
-            </a>
-          <!-- <li><a href="">Instagram</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Email</a></li> -->
-        </ul>
-        <p><a href="#">Scroll to top</a></p>
-      </div>
-    </footer>
+                </li>
+              </ul>
+            </div>
+              <a href="#">Scroll to top</a>
+          </footer>
   </body>
 </html>
