nav bar complete

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -9,16 +9,19 @@
     <link rel="stylesheet" href="">
   </head>
   <body>
-    <header class="nav-bar">
-      <h1>Meyija Travels</h1>
-      <nav>
-        <ul class="nav-items">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Aboutus.html">About Us</a></li>
-          <li><a href="#contactus">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+   <!-- This will need to be flexed -->
+   <header class="nav-bar">
+    <nav>
+      <ul class="nav-list">
+        <h1 class="nav-item">Meyija Travels</h1>
+        <li class="nav-item">
+          <a href="index.html">Home</a></li>
+        <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
+        <li class="nav-item"><a href="#contact">Contact Us</a></li>
+      </ul>
+    </nav>
+    <!-- Flex ends here -->
+  </header>
 
     <div class="about-us">
       <h2 class="#aboutus">About Us</h2>
