--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
     <!-- This will need to be flexed -->
     <header class="nav-bar">
-      <h1>Meyija Travels</h1>
       <nav>
-        <ul class="nav-items">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Aboutus.html">About Us</a></li>
-          <li><a href="#contactus">Contact</a></li>
+        <ul class="nav-list">
+          <h1 class="nav-item">Meyija Travels</h1>
+          <li class="nav-item">
+            <a href="index.html">Home</a></li>
+          <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
+          <li class="nav-item"><a href="#contact">Contact Us</a></li>
         </ul>
       </nav>
       <!-- Flex ends here -->
