--- a/topic1.html
+++ b/topic1.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
-    <header class="nav-bar">
-      <h1>Meyija Travels</h1>
-      <nav>
-        <ul class="nav-items">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Aboutus.html">About Us</a></li>
-            <li><a href="#contactus">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+   <!-- This will need to be flexed -->
+   <header class="nav-bar">
+    <nav>
+      <ul class="nav-list">
+        <h1 class="nav-item">Meyija Travels</h1>
+        <li class="nav-item">
+          <a href="index.html">Home</a></li>
+        <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
+        <li class="nav-item"><a href="#contact">Contact Us</a></li>
+      </ul>
+    </nav>
+    <!-- Flex ends here -->
+  </header>
     <main>
         <h2>Top 5 countries to visit in the summer</h2>
         <img src="https://images.pexels.com/photos/1174732/pexels-photo-1174732.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of a beach">
