--- a/topic2.html
+++ b/topic2.html
@@ -8,16 +8,19 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
+    <!-- This will need to be flexed -->
     <header class="nav-bar">
-      <h1>Meyija Travels</h1>
-      <nav>
-        <ul class="nav-items">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Aboutus.html">About Us</a></li>
-            <li><a href="#contactus">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+        <nav>
+          <ul class="nav-list">
+            <h1 class="nav-item">Meyija Travels</h1>
+            <li class="nav-item">
+              <a href="index.html">Home</a></li>
+            <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
+            <li class="nav-item"><a href="#contact">Contact Us</a></li>
+          </ul>
+        </nav>
+        <!-- Flex ends here -->
+      </header>
     <main>
         <h2>Recommendations for newlyweds</h2>
         <img src="https://images.pexels.com/photos/1024993/pexels-photo-1024993.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of a beach">
@@ -25,7 +28,7 @@
         <img src="https://images.pexels.com/photos/1045541/pexels-photo-1045541.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of a beach">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores architecto minima inventore libero magnam cupiditate nisi ratione quae quisquam dolorem.</p>
     </main>
-    
+
     <footer class="footer-section">
         <div class="subscribe-section">
             <h2 class="#contactus">Contact Us</h2>
