added CSS grid to index HTML

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
 
-    <!-- This will need to be flexed -->
     <header class="nav-bar">
       <nav>
+            <!-- Flexed-->
         <ul class="nav-list">
           <h1 class="nav-item">Meyija Travels</h1>
           <li class="nav-item">
@@ -19,8 +19,9 @@
           <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
           <li class="nav-item"><a href="#contact">Contact Us</a></li>
         </ul>
+        <!-- Flex end -->
       </nav>
-      <!-- Flex ends here -->
+
     </header>
     <div class="about-us">
       <h2 class="#aboutus">About Us</h2>
@@ -31,34 +32,34 @@
       </p>
     </div>
 
-    <!-- This will need to be flexed or CSS grid -->
-    <main class="main-section">
-      <div class="topic-one">
-        <img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=800" width="100px" height="100px" alt="Image of balloons">
-        <a href="topic1.html"><h3>Top 5 countries to visit in the summer</h3></a>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-          recusandae <span>Read More</span>
-        </p>
+    <!--CSS grid -->
+<main>
+  <div class="container">
+      <div class="topic-1"> <a href="topic1.html"><h3>Top 5 countries to visit in the summer</h3></a></div>
+      <div class="topic-2"><a href="topic2.html"><h3>Recommendations for newlyweds</h3></a> </div>
+      <div class="topic-3"><a href="topic3.html"><h3>Top cities to travel to in Europe</h3></a></div>
+      <div class="image-1"><img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of balloons"> </div>
+      <div class="image-2"> <img src="https://images.pexels.com/photos/5206714/pexels-photo-5206714.jpeg?auto=compress&cs=tinysrgb&w=800"  alt="Image of a newlywed"></div>
+      <div class="image-3"> <img src="https://images.pexels.com/photos/548077/pexels-photo-548077.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of Paris"> </div>
+      <div class="des-1">
+    <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+    recusandae <span>Read More</span>
+  </p>
       </div>
-      <div class="topic-two">
-        <img src="https://images.pexels.com/photos/5206714/pexels-photo-5206714.jpeg?auto=compress&cs=tinysrgb&w=800" width="100px" height="100px" alt="Image of a newlywed">
-        <a href="topic2.html"><h3>Recommendations for newlyweds</h3></a>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni,
-          adipisci <span>Read More</span>
-        </p>
+   <div class="des-2">  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+    recusandae <span>Read More</span>
+  </p> 
       </div>
-      <div class="topic-three">
-        <img src="https://images.pexels.com/photos/548077/pexels-photo-548077.jpeg?auto=compress&cs=tinysrgb&w=800" width="100px" height="100px" alt="Image of Paris">
-        <a href="topic3.html"><h3>Top cities to travel to in Europe</h3></a>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore,
-          minima? <span>Read More</span>
-        </p>
+   <div class="des-3">  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
+    recusandae <span>Read More</span>
+  </p>
       </div>
-    </main>
-
+  </div>
+</main>
+<!-- End of CSS Grid -->
 
 <footer class="footer-section">
   <!-- This section may be flexed -->
