changed  a few colours

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="image-1"><img src="https://images.pexels.com/photos/2325446/pexels-photo-2325446.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of balloons"> </div>
       <div class="image-2"> <img src="https://images.pexels.com/photos/5206714/pexels-photo-5206714.jpeg?auto=compress&cs=tinysrgb&w=800"  alt="Image of a newlywed"></div>
       <div class="image-3"> <img src="https://images.pexels.com/photos/548077/pexels-photo-548077.jpeg?auto=compress&cs=tinysrgb&w=800" alt="Image of Paris"> </div>
+      
       <div class="des-1">
     <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
@@ -61,8 +62,17 @@
 </main>
 <!-- End of CSS Grid -->
 
+
+
+
+
+
+
+
+
+<!-- 
 <footer class="footer-section">
-  <!-- This section may be flexed -->
+  This section may be flexed
   <div class="subscribe-section">
       <h2 class="#contactus">Contact Us</h2>
       <div class="subscribe">
@@ -70,7 +80,8 @@
         <button type="submit">Submit</button>
       </div>
 </div>
-<!-- This section will be flexed -->
+
+This section will be flexed
       <div class="socials">
         <ul class="nav-items-2">
           <li>
@@ -90,7 +101,7 @@
         </ul>
       </div>
         <a href="#">Scroll to top</a>
-    </footer>
+    </footer> -->
 
   </body>
 </html>
