social medai handles complete

--- a/index.html
+++ b/index.html
@@ -64,6 +64,38 @@
 
 
 
+<footer>
+<div class="container-social">
+  <div> 
+    <ul>
+      <li>
+      <a href="https://youtube.com" target="_blank"> 
+        <!-- helps re-direct to new page  -->
+      <img src="https://www.freepnglogos.com/uploads/logo-ig-png/logo-ig-instagram-new-logo-vector-download-5.png" width="45" alt="instagram logo">
+      </a>
+  </li>
+</div>
+
+<div>
+  <li>
+      <a href="https://youtube.com" target="_blank"> 
+      <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-png-white-images-logo-33.png" width="48" alt="Twitter logo"></li>
+      </a>
+  <li>
+  </div>
+  <div>
+      <a href="https://youtube.com" target="_blank"> 
+      <img src="https://www.freepnglogos.com/uploads/email-png/file-email-icon-svg-wikimedia-commons-20.png" width="52" alt="email logo">
+    </a>
+    </li>
+  </ul>
+ </div>
+</iv>
+</div>
+<a href="#">Scroll to top</a>
+
+</footer>
+
 
 
 
@@ -112,3 +144,5 @@ This section will be flexed
      <!-- <li><a href="">Instagram</a></li>
           <li><a href="">Twitter</a></li>
           <li><a href="">Email</a></li> -->
+
+
