aligned social medaia items

--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
 
 
 <footer>
+  <div> <h2 class="contactus">Contact Us</h2></div>
+
+
 <div class="container-social">
   <div> 
     <ul>
       <li>
-      <a href="https://youtube.com" target="_blank"> 
+      <a href="https://www.instagram.com/" target="_blank"> 
         <!-- helps re-direct to new page  -->
       <img src="https://www.freepnglogos.com/uploads/logo-ig-png/logo-ig-instagram-new-logo-vector-download-5.png" width="45" alt="instagram logo">
       </a>
@@ -78,13 +81,13 @@
 
 <div>
   <li>
-      <a href="https://youtube.com" target="_blank"> 
+      <a href="https://twitter.com" target="_blank"> 
       <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-png-white-images-logo-33.png" width="48" alt="Twitter logo"></li>
       </a>
   <li>
   </div>
   <div>
-      <a href="https://youtube.com" target="_blank"> 
+      <a href="https://outlook.live.com/" target="_blank"> 
       <img src="https://www.freepnglogos.com/uploads/email-png/file-email-icon-svg-wikimedia-commons-20.png" width="52" alt="email logo">
     </a>
     </li>
