complete all grids for all pages, finished basics

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
 
     <!--CSS grid -->
-<main>
-  <div class="container">
+<main class="img-section">
+  <div class="container-index">
       <div class="topic-1"> <a href="topic1.html"><h3>Top 5 countries to visit in the summer</h3></a></div>
       <div class="topic-2"><a href="topic2.html"><h3>Recommendations for newlyweds</h3></a> </div>
       <div class="topic-3"><a href="topic3.html"><h3>Top cities to travel to in Europe</h3></a></div>
@@ -66,7 +66,7 @@
 
 <footer>
   <div> <h2 class="contactus">Contact Us</h2></div>
-
+ 
 
 <div class="container-social">
   <div> 
@@ -95,9 +95,15 @@
  </div>
 </iv>
 </div>
-<a href="#">Scroll to top</a>
 
+<div class="subscribe-section">
+  <div class="subscribe">
+    <input type="text" placeholder="Enter your email address" />
+    <button type="submit">Submit</button>
+    <a href="#">Scroll to top</a>
+  </div>
 </footer>
+
 
 
 
@@ -115,27 +121,6 @@
         <button type="submit">Submit</button>
       </div>
 </div>
-
-This section will be flexed
-      <div class="socials">
-        <ul class="nav-items-2">
-          <li>
-            <a href="https://youtube.com" target="_blank"> Twitter
-            <img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" width="50" alt="..">
-            </a>
-        </li>
-        <li>
-            <a href="https://youtube.com" target="_blank"> Youtube
-            <img src="https://www.freepnglogos.com/uploads/youtube-logo-png-images-0.png" width="80" alt=""></li>
-            </a>
-        <li>
-            <a href="https://youtube.com" target="_blank"> Tiktok
-            <img src="https://www.freepnglogos.com/uploads/tik-tok-logo-png/tik-tok-how-use-tiktok-create-cool-videos-with-iphone-14.png" width="70" alt="">
-          </a>
-          </li>
-        </ul>
-      </div>
-        <a href="#">Scroll to top</a>
     </footer> -->
 
   </body>
