added linkedin and dps

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meyija Travels</title>
     <link rel="stylesheet" href="./CSS/style.css" />
-    <link rel="stylesheet" href="">
   </head>
+
   <body>
    <!-- This will need to be flexed -->
    <header class="nav-bar">
@@ -45,12 +45,12 @@
     <!-- CSS GRID-->
     <main class="img-section">
       <div class="container-about">
-          <div class="topic-1"> <a href="https://www.linkedin.com/in/melanie-akas-b59281237/"><h3>Mel Akas</h3></a></div>
-          <div class="topic-2"><a href=""><h3>Eyi Adepegba</h3></a> </div>
-          <div class="topic-3"><a href=""><h3>Jay Fakoya</h3></a></div>
+          <div class="topic-1"> <a href="https://www.linkedin.com/in/melanie-akas-b59281237/"target="_blank"><h3>Mel Akas</h3></a></div>
+          <div class="topic-2"><a href="https://www.linkedin.com/in/eyi-adepegba-9b7430159/" target="_blank"><h3>Eyi Adepegba</h3></a> </div>
+          <div class="topic-3"><a href="https://www.linkedin.com/in/olujoke-fakoya-3a616a106/" target="_blank"><h3>Jay Fakoya</h3></a></div>
           <div class="image-1"> <img src="./images/DP Linkedin.jpeg" alt="Image of Mel"> </div>
-          <div class="image-2"> <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="Image of Mel Akas alt="Image of Eyi"> </div>
-          <div class="image-3"><img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="Image of Mel Akas alt="Image of Jay"> </div>
+          <div class="image-2"> <img src="./images/Eyi Image.jpeg" alt="Image of Eyi"> </div>
+          <div class="image-3"><img src="./images/Jay Image.jpeg" alt="Image of Jay"> </div>
           
           <div class="des-1">
         <p>
