changed contact class to ID to enable scroll to bottom

--- a/topic3.html
+++ b/topic3.html
@@ -16,7 +16,7 @@
             <li class="nav-item">
               <a href="index.html">Home</a></li>
             <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
-            <li class="nav-item"><a href="#contact">Contact Us</a></li>
+            <li class="nav-item"><a href="#contactus-topics">Contact Us</a></li>
           </ul>
         </nav>
         <!-- Flex ends here -->
@@ -47,7 +47,7 @@
   <!-- CSS Grid ends  -->
 
 <footer>
-  <div> <h2 class="contactus-topics">Contact Us</h2></div>
+  <div> <h2 id="contactus-topics">Contact Us</h2></div>
  
 
 <div class="container-social">
