--- a/Aboutus.html
+++ b/Aboutus.html
@@ -17,7 +17,7 @@
         <li class="nav-item">
           <a href="index.html">Home</a></li>
         <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
-        <li class="nav-item"><a href="#contact">Contact Us</a></li>
+        <li class="nav-item"><a href="#contactus2">Contact Us</a></li>
       </ul>
     </nav>
     <!-- Flex ends here -->
@@ -99,7 +99,7 @@
     </main> -->
     
 <footer>
-  <div> <h2 class="contactus">Contact Us</h2></div>
+  <div> <h2 id="contactus2">Contact Us</h2></div>
  
 
 <div class="container-social">
