--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
           <li class="nav-item">
             <a href="index.html">Home</a></li>
           <li class="nav-item"><a href="Aboutus.html">About Us</a></li>
-          <li class="nav-item"><a href="#contact">Contact Us</a></li>
+          <li class="nav-item"><a href="#contactus2">Contact Us</a></li>
         </ul>
+        
         <!-- Flex end -->
       </nav>
 
@@ -65,7 +66,8 @@
 
 
 <footer>
-  <div> <h2 class="contactus">Contact Us</h2></div>
+  <div> <h2 id="contactus2">Contact Us</h2></div>
+  <!-- <section <h2 id="contactus2">Contact Us</h2> </section> -->
  
 
 <div class="container-social">
