added decriptions to all html files

--- a/Aboutus.html
+++ b/Aboutus.html
@@ -25,19 +25,20 @@
 
     <div class="about-us">
       <h2 class="#aboutus">About Us</h2>
+      <br>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-        quaerat corporis alias adipisci labore dolorem molestias temporibus
-        assumenda quia soluta Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-        quaerat corporis alias adipisci labore dolorem molestias temporibus
-        assumenda quia soluta Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-        quaerat corporis alias adipisci labore dolorem molestias temporibus
-        assumenda quia soluta Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-        quaerat corporis alias adipisci labore dolorem molestias temporibus
-        assumenda quia soluta Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-        quaerat corporis alias adipisci labore dolorem molestias temporibus
-        assumenda quia soluta  <span>Read More</span>
-      </p>
+        Hey! Welcome to Meyija Travels. 
+        <br>
+        <br>
+        Meet Mel, Eyi and Jay, the three women that make up this amazing 
+        team. We created Meyija Travels because we wanted to share our 
+        deep love for travelling with everyone, regardless of if you’re an 
+        expert traveller or just beginning your journey. This is a fun space 
+        for us to share our thoughts, tips and life changing memories with 
+        our amazing readers!
+        Join us as we continue on our travel journey! 
+        <!-- <strong>Read More</strong> -->
+       </p>
       <br>
       <h2 class="#aboutus">Meet the team</h2>
     </div>
@@ -54,18 +55,15 @@
           
           <div class="des-1">
         <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-        recusandae <span>Read More</span>
+          A self-motivated, driven and flexible professional ho is versatile, fast learning, agile and thrives off problem solving. Experience with stakeholder management, digital transformation, coupled with web development as a trainee. <span>Read More</span>
       </p>
           </div>
        <div class="des-2">  <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-        recusandae <span>Read More</span>
+        A Biomedical Science graduate with first class honours nurturing my passion for tech and medicine every day. I have gained invaluable skills in the various roles I’ve had across various industries. <span>Read More</span>
       </p> 
           </div>
        <div class="des-3">  <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-        recusandae <span>Read More</span>
+        Experienced Public Health Specialist with a demonstrated history of working in the hospital & health care industry.Skilled in Microsoft Word, Public Speaking, Project Management, Teamwork, and Team Leadership. <span>Read More</span>
       </p>
           </div>
       </div>
