--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
     </header>
     <div class="about-us">
       <h2 class="#aboutus">About Us</h2>
+      <br>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore
-        quaerat corporis alias adipisci labore dolorem molestias temporibus
-        assumenda quia soluta <span>Read More</span>
+        Meet Mel, Eyi and Jay, the three women that make up this amazing 
+        team. We created Meyija Travels because we wanted to share our 
+        deep love for travelling with everyone, regardless of if you’re an 
+        expert traveller or just beginning your journey. This is a fun space 
+        for us to share our thoughts, tips and life changing memories with 
+        our amazing readers!
+        Join us as we continue on our travel journey! 
+        <!-- <span>Read More</span> -->
       </p>
     </div>
 
@@ -45,18 +51,18 @@
       
       <div class="des-1">
     <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-    recusandae <span>Read More</span>
+      Meyija travels have come together to make sure that you don’t 
+      miss out on the top 5 countries to visit. <span>Read More</span>
   </p>
       </div>
    <div class="des-2">  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-    recusandae <span>Read More</span>
+    You will be 
+      spoilt for choice but we guarantee your perfect vacation destination 
+      is in this list. <span>Read More</span>
   </p> 
       </div>
    <div class="des-3">  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi,
-    recusandae <span>Read More</span>
+    This blog post is a little different. Welcome friends. <span>Read More</span>
   </p>
       </div>
   </div>
