--- a/Aboutus.html
+++ b/Aboutus.html
@@ -55,11 +55,11 @@
           
           <div class="des-1">
         <p>
-          A self-motivated, driven and flexible professional ho is versatile, fast learning, agile and thrives off problem solving. Experience with stakeholder management, digital transformation, coupled with web development as a trainee. <span>Read More</span>
+          A self-motivated, driven and flexible professional who is versatile, fast learning, agile and thrives off problem solving. Experience with stakeholder management, digital transformation, coupled with web development as a trainee. Aspires to up  travelling game explore more of the world! <span>Read More</span>
       </p>
           </div>
        <div class="des-2">  <p>
-        A Biomedical Science graduate with first class honours nurturing my passion for tech and medicine every day. I have gained invaluable skills in the various roles I’ve had across various industries. <span>Read More</span>
+        My name is Eyi, 1/3 of Meyija Travels. I’m 24, I work in tech sales and I love music. I’m still a novice in the travelling game but recently in the last year or so, I have been expanding my travel portfolio. This year I have a lot of holidays planned and the one I’m most excited about is Malta in June. I can’t wait! <span>Read More</span>
       </p> 
           </div>
        <div class="des-3">  <p>
